<resources>
    <string name="app_name">DataboxInc</string>
    <string-array name="menu_array">
        <item>Home</item>
        <item>Show Data</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Action settings</string>
    <string name="hello_world">Hello</string>
    <string name="facebook_app_id">PUT YOUR FACEBOOK APP ID HERE</string>
    <string name="text_welcome_login">Hello, we need you to sign in with Twitter, Facebook and Instagram to proceed.</string>
    <string name="title_main_activity">DataboxInc</string>
    <string name="text_no_light">Nothing to see here, please come back another time.</string>
    <string name="text_no_sentiment">No feelings so far, please come back another time.</string>
    <string name="text_no_locations">Zero recorded places, please come back another time.</string>
    <string name="tab_general_bulb_icon">Bulb icon</string>
    <string name="tab_locations_icon">Locations Icon</string>
    <string name="tab_heart_icon">Heart icon</string>
    <string name="lbl_profile_name">Name:</string>
    <string name="lbl_profile_gender">Gender:</string>
    <string name="lbl_profile_locale">Locale:</string>
    <string name="lbl_profile_link">Link:</string>
    <string name="lbl_profile_email">Email:</string>
    <string name="lbl_profile_age_range">Age Range:</string>
    <string name="lbl_tweet_text">Tweet:</string>
    <string name="lbl_sentiment">Sentiment:</string>
    <string name="lbl_confidence">Confidence:</string>
    <string name="text_no_trends">No trends yet.</string>
    <string name="lbl_trend">Trend:</string>
    <string name="lbl_trend_count">Count:</string>
    <string name="connect_instagram">Log in with Instagram</string>
    <string name="lbl_steps_date">Date:</string>
    <string name="lbl_steps">Steps:</string>
</resources>